--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,14 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Bree Serif',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: antiquewhite;
+  background: linear-gradient(to bottom right, #000000, #333333);
   background-attachment: scroll;
+  text-shadow: 0.1em 0.1em 2em  grey;
+  
 }
 
 code {
